--- a/examples/jquery-slideandfade-examples.css
+++ b/examples/jquery-slideandfade-examples.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial,Helvetica,sans-serif;
     background-color: #f5f5f5;
-    background-image: url('../images/escheresque.png');
+    background-image: url('escheresque.png');
 }
 
 h1 {
