--- a/css/main.css
+++ b/css/main.css
@@ -9,24 +9,36 @@ h1 {
     font-family: Helvetica,arial,sans-serif;
     font-size: 30px;
     font-weight: normal;
-    margin-left: 30px;
-    padding-top: 30px;
+    padding: 30px 0 10px 0;
+    margin: 0 30px 0 30px;
 }
 
-h3 {
+a {
+    text-decoration: none;
+    outline: none;
+}
+
+h2 {
     color: #696969;
     font-family: Helvetica,arial,sans-serif;
-    font-size: 20px;
+    font-size: 22px;
     font-weight: normal;
-    margin-left: 30px;
-    padding-top: 30px;
+    padding: 10px 0 10px 0;
+    margin: 0 30px 0 30px;
+}
+
+.codebox {
+    padding: 10px 0 10px 0;
+    margin: 0 30px 0 30px;
+    background-color: #f0f0f0;
+    border: 1px solid #e0e0e0;
 }
 
 p {
     color: #696969;
     font-family: Helvetica,arial,sans-serif;
     padding: 10px 0 10px 0;
-    margin: 0 10px 0 10px;
+    margin: 0 30px 0 30px;
 }
 
 div.main-block {
